--- a/02_theory.tex
+++ b/02_theory.tex
@@ -239,6 +239,133 @@ for the corresponding $x$, $y$ and $z$ values. In numerical applications, as we 
 \end{align*}
 The forward AD method described above will be similar for a vector function as it was for a scalar function above, but there will be two differences in particular. The first one is that the primal variables needs to be initialised with their Jacobians and not just a gradient vector. The Jacobian for a primary variable of dimension $n$ will be the $n \times n$ identity matrix. The second change is that when evaluating new functions depending on the primary variables, the Jacobians corresponding to the functions will be calculated with matrix operations instead of vector operations as seen above. 
 
+\section{Applications of Automatic Differentiation}
+AD can be used in a wide spectre of applications, but one simple application of AD is if you want to find the roots of a function. The simplest example is for a scalar function $f$ with a scalar input $x$ then the iteration scheme
+\begin{equation*}
+    x_{i+1} = x_i - \frac{f(x_i)}{f'(x_i)},
+\end{equation*}
+for an initial $x_0$, will converge to a root of $f$ given that it satisfies the assumptions made in the derivation of the formulae. This is called the Newton-Raphson method \textbf{is it necessary to have reference here?}. With AD this is super easy as you only have to define the function $f(x)$ and then the AD finds $f'(x)$ automatically and you can use the Newton Raphson method directly. Exactly the same approach can be used to solve linear systems in multiple dimensions. Let us look at the linear system 
+\begin{equation}
+    \textbf{A}\boldsymbol{x} = \textbf{b}.
+    \label{eq:linearSystem}
+\end{equation}
+But instead of looking at it like in equation \eqref{eq:linearSystem} we write it on residual form such that
+\begin{equation*}
+	\boldsymbol{F}(\boldsymbol{x}) = \textbf{A}\boldsymbol{x} - \boldsymbol{b} = 0 .
+\end{equation*}
+This means that to solve the linear system in equation \eqref{eq:linearSystem}, we need to find the root of $\boldsymbol{F}(\boldsymbol{x})$. This can be done by choosing an initial value $\boldsymbol{x}^0$ and observe that since $\boldsymbol{F}(\boldsymbol{x})$ is linear, this will converge in one step using the multivariate Newton-Raphson method. The general form of the multivariate Newton-Raphson method is given by
+\begin{equation}
+	\boldsymbol{x}^{n+1} = \boldsymbol{x}^n - \left[J_{\boldsymbol{F}}  (\boldsymbol{x}^n)\right]^{-1} \boldsymbol{F}(\boldsymbol{x}^n).
+    \label{eq:newtonRaphsonVector}
+\end{equation}
+Here $\left[J_{\boldsymbol{F}}  (\boldsymbol{x}^n)\right]^{-1}$ is the inverse of the Jacobian of $\boldsymbol{F}$ at $\boldsymbol{x}^n$. For a simple linear system like equation \eqref{eq:linearSystem} it may seem a bit forced and not necessary to make the effort to use AD to solve for $\boldsymbol{x}$. But for numerical application we can with this method easily solve non-linear equations by looking at the residual form and use the Newton-Raphson method \eqref{eq:newtonRaphsonVector} with AD. Consider the Poisson equation
+\begin{equation}
+    -\nabla(\textbf{K}\nabla u) = q,
+    \label{eq:Poisson}
+\end{equation}
+where \textbf{K} is an diffusion coefficient and we want to find $u$ on $\Omega \in \Re^d$. Numerically this can be done by using a finite volume method. This approach is based on applying conservation laws inside the domain. By dividing the domain into smaller cells $\Omega_i$ we can, instead of looking at the Poisson equation in differential form integrate it on each cell such that
+\begin{equation}
+    \int_{\partial\Omega_i} - \textbf{K} \nabla u \cdot \textbf{n} ds = \int_{\Omega_i} q dA.
+    \label{eq:conservation}
+\end{equation}
+Here \textbf{n} is the unit normal to the cell $\Omega_i$, so equation \eqref{eq:conservation} describes the conservation of mass in the cell $\Omega_i$ where total flux in and out of the boundary of $\Omega_i$ is equal to the total production in $\Omega_i$. For simplicity we define $\textbf{v} = - \textbf{K} \nabla u$ as the flux. As a simple example to begin with, we will consider figure \ref{fig:gridTwoCells} who shows two cells $\Omega_i$ and $\Omega_k$. They both have a value $u_i$ and $u_k$ in the centre of the cell and the boundary, or facet, between the cells is defined as $\Gamma_{i,k}$.
+\begin{figure}[htb]
+    \centering
+    \includegraphics[width = 0.7\textwidth]{figures/grid_two_cells.pdf}
+    \caption{}
+    \label{fig:gridTwoCells}
+\end{figure}
+
+ Now the flux through the boundary $\Gamma_{i,k}$ can be computed by
+\begin{equation}
+    v_{i,k} = \int_{\Gamma_{i,k}} \textbf{v}\cdot\textbf{n}_{i,k} ds 
+    \label{eq:fluxOverBoundary}
+\end{equation}
+If we let $L_{i,k}$ be the length of $\Gamma_{i,k}$, then the integral in \eqref{eq:fluxOverBoundary} can be approximated by the midpoint rule with $\tilde{\textbf{v}}_{i,k}$ as the flux on the midpoint of $\Gamma_{i,k}$ 
+\begin{equation*}
+    v_{i,k} \approx L_{i,k}\tilde{\textbf{v}}_{i,k} \cdot \textbf{n}_{i,k} = -L_{i,k}\textbf{K}\nabla \tilde{u}_{i,k} \cdot \textbf{n}_{i,k}.
+\end{equation*}
+Here $\tilde{u}_{i,k}$ is the value of $u$ at the centre of the facet $\Gamma_{i,k}$. The problem we now face is that in the finite volume method, we only have the value of $u$ at the center of cell $\Omega_i$, $u_i$, and not on the facet, $\tilde{u}_{i,k}$. This means that finding the gradient of $u$ on $\Gamma_{i,k}$ using the approximation
+\begin{equation*}
+    v_{i,k} \approx L_{i,k}\textbf{K}_i\frac{(\tilde{u}_{i,k} - u_i)\textbf{c}_{i,k}}{|\textbf{c}_{i,k}|^2} \cdot \textbf{n}_{i,k},
+\end{equation*}
+can not be computed directly. Here $\textbf{c}_{i,k}$ is the vector from $u_i$ to $\tilde{u}_{i,k}$ as seen in figure \ref{fig:gridTwoCells} . To handle this we first define what we call a transmissibility matrix where
+\begin{equation}
+    T_{i,k}(\tilde{u}_{i,k} - u_i) = L_{i,k}\textbf{K}_i\frac{(\tilde{u}_{i,k} - u_i)\textbf{c}_{i,k}}{|\textbf{c}_{i,k}|^2} \cdot \textbf{n}_{i,k}
+    \label{eq:transmissibility}
+\end{equation}
+Now we know that the amount of flux from cell $\Omega_i$ to $\Omega_k$ must be the same as from $\Omega_k$ to $\Omega_i$ only with opposite sign. This gives us the relations $v_{i,k} = -v_{k,i}$ and from figure \ref{fig:gridTwoCells} it is clear that $\tilde{u}_{i,k} = \tilde{u}_{k,i}$. Hence we have the relation 
+\begin{equation*}
+    v_{i,k} = T_{i,k}(\tilde{u}_{i,k} - u_i) \hspace{3em} -v_{i,k} = T_{k,i}(\tilde{u}_{i,k} - u_k)
+\end{equation*}
+By subtraction the two equations for $v_{k,i}$ and moving $T_{i,k}$ and $T_{k,i}$ to the other side 
+\begin{equation}
+    \begin{align*}
+        (T_{i,k}^{-1} + T_{k,i}^{-1}) v_{i,k} &= (\tilde{u}_{i,k} - u_i) - (\tilde{u}_{i,k} - u_k)
+        \\
+        v_{i,k} &= (T_{i,k}^{-1} + T_{k,i}^{-1})^{-1}(u_k - u_i) \\
+        v_{i,k} &= T_{i,k}(u_k - u_i)
+    \end{align*}
+    \label{eq:flux}
+\end{equation}
+we manage to eliminate $\tilde{u}_{i,k}$ and get a computable expression for the gradient of $u$. This is called the two-point flux-approximation (TPFA) \emph{\citep{lieMrstUrl}}. Now that we have an approximation of the flux through the boundary between $\Omega_i$ and $\Omega_k$ we get that equation \eqref{eq:fluxOverBoundary} can be approximated by 
+\begin{equation*}
+    \sum_k T_{i,k}(u_k - u_i) = q_i, \hspace{3em} \forall \Omega_i \in \Omega
+\end{equation*}
+Where $q_i$ is the total production in cell $\Omega_i$. Now we can get a linear system of the form \textbf{A}\textbf{u} = \textbf{b},  which on residual form becomes \textbf{F}(\textbf{u}) = \textbf{A}\textbf{u} - \textbf{b} = 0 where
+\begin{align*}
+    \textbf{A}_{i,j} = 
+    \left\lbrace
+    \begin{array}{lr}
+    \sum_k T_{i,k} \hspace{3em}&\text{if } j = 1\\
+    -T_{i,j} \hspace{3em}&\text{if } j \neq i
+    \end{array}
+    \right.
+\end{align*}
+Now we can solve the poisson equation \eqref{eq:Poisson}, using the scheme explained in \eqref{eq:newtonRaphsonVector} and by having $u$ as an AD-variable. But we still end up with a linear system of equations that we may as well solve without AD. 
+
+To show the real elegance of using AD to solve PDE's we want to create a framework where we have defined discrete divergence and gradient operators such that we can write the discrete equations we want to solve on a similar form as in the continuous case. We also want to be able to do this no matter how complex and unstructured grid we have. Instead of the simple two-cell grid we used in figure \ref{fig:gridTwoCells} consider a more complex grid like we have in figure \ref{fig:partialGrid}. The figure shows a part of some larger grid where we will focus on the relation between cell 5 and 8. To define the discrete divergence and gradient operators we need som information from the grid. The grid consist of three types of objects: cells, facets and nodes. The cells are each $\Omega_i \subset \Omega$ and in our two-dimensional case the facets are simply the lines between each cell. The nodes are defined points based on the method we use where we want to find the value of the function we search. In the case of figure \ref{fig:gridTwoCells} we had two nodes, $u_i$ and $u_k$. Each cell and facet has physical properties like area or length and centroid or centre. The facets also has a normal vector. \autoref{fig:partialGrid} shows how we have two different mappings that explains the relation between the cells and the facets. The first mapping $F(c)$ is mapping from cell $c$ to facet $f$. The second mapping, $C_i(f)$ for $i = 1,2$, is a mapping from a facet $f$ to the two cells $C_1$ and $C_2$ that share this facet. All these properties will be used to create the discrete divergence and gradient operators.
+\begin{figure}[htb]
+    \centering
+    \includegraphics[width = 0.7\textwidth]{figures/grid_cells_facets.pdf}
+    \caption{}
+    \label{fig:partialGrid}
+\end{figure}
+
+Our goal now is to, based on the grid properties, create the divergence and gradient operators, corresponding to this grid. Consider the Poisson equation \eqref{eq:Poisson} for the function $u$. Then the gradient operator for a facet $f$ is defined as 
+\begin{equation*}
+    \texttt{gradient}(u)[f] = u[C_2(f)] - u[C_1(f)] 
+\end{equation*}
+when $u[C_i(f)]$ is the value of u at the cell corresponding to $C_i(f)$. For the divergence operator, we remember the expression we found for the flux through a facet in equation \eqref{eq:flux}. Let $v_{i,k} = v[f]$ when f is the facet between cell $i$ and cell $k$. Since the divergence in a cell is the same as the sum of flux leaving and entering the cell, the discrete divergence operator for a cell $c$ is defined as 
+\begin{equation*}
+    \texttt{divergence}(\textbf{v})[c] = \sum_{f\in f(c)} \text{sgn}(f)\textbf{v}[f]
+\end{equation*}
+where the function sgn($f$) is defined as 
+\begin{align*}
+    \text{sgn}(f) = \left\lbrace
+    \begin{array}{rr}
+        1 \hspace{3em}& \text{if } c \in C_1(f)\\
+        -1 \hspace{3em}& \text{if } c \in C_2(f).
+    \end{array}
+    \right.
+\end{align*}
+Hence we can now only based on the topology of the grid create discrete divergence and gradient operators such that the Poisson equation \eqref{eq:Poisson} can be written as
+\begin{equation*}
+    \textbf{F}(\textbf{u}) = \texttt{divergence}(\textbf{v})-\textbf{q} = 0
+\end{equation*}
+with \textbf{v} = \textbf{T }\texttt{gradient}(\textbf{u}) where \textbf{T} is the transmissibility matrix defined in \eqref{eq:transmissibility}. For this simple Poisson equation, we will still have a linear system and we would not necessarily need to use AD to solve it, but for more complex problems, we can derive the discrete divergence and gradient operators in the same approach for any type of grid and although the system becomes non-linear it will be easy to solve using AD and Newton-Raphson method. An example of this can be seen in section \ref{sec:FlowSolver}.
+
+ 
+
+
+
+
+
+
+
+
+
+
 
 
 
